--- a/express-biztime/package.json
+++ b/express-biztime/package.json
@@ -1,6 +1,17 @@
 {
+  "name": "biztime",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "Michael Abebe",
   "dependencies": {
     "express": "^4.21.0",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "slugify": "^1.6.6",
+    "supertest": "^7.0.0"
   }
 }
